2nd training/Community/Community/Community1/force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <description>Employee</description>
    <label>Employee</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>