2nd training/Community/Community/Community1/force-app/main/default/objects/Employee__c/fields/Emp_ID__c.field-meta.xml
<CustomField>
    <fullName>Emp_ID__c</fullName>
    <description>Emp_ID</description>
    <displayFormat>Emp-{0000}</displayFormat>
    <inlineHelpText>Emp_ID</inlineHelpText>
    <label>Emp_ID</label>
    <type>AutoNumber</type>
</CustomField>