2nd training/Community/Community/Community1/force-app/main/default/objects/Employee__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <description>Employee Name</description>
    <inlineHelpText>Employee Name</inlineHelpText>
    <label>Employee Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>